--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -16,7 +16,7 @@
                             <input type="password" name="password" id="password" class="form-control" autocomplete="off">
                         </div>
                         <div class="form-group">
-                            <span class="btn btn-info btn-md" id="loginUser">submit</span>
+                            <span class="btn btn-info btn-md" id="loginUser">Login</span>
                         </div>
                     </form>
                 </div>
@@ -72,13 +72,13 @@
                         <!--end card header-->
                        <div id="usersMsgsHldr"style="overflow: scroll;height: 48vh;"></div>
                         <div class="card-footer bg-primary">
-                            <form class="d-flex align-items-center">
+                            <div class="d-flex align-items-center">
                                 <div class="input-group input-group-lg">
                                     <input class="form-control" type="text" placeholder="Type a message" name="message" id="messageData"  autocomplete="off" />
                                 </div>
                                 <span id="sendMessage" class="msgSubmit" >Submit
                                 </span>
-                            </form>
+                            </div>
                         </div>
                     </div>
                 </div>
